# arkalia-luna-system

./: .gitignore  ACTION-PRIORITAIRE.md  AMELIORATIONS-A-FAIRE.md  AMELIORATIONS-MD-2025-11-13.md  ANALYSE-3-PROJETS-FEATURED.md  ANALYSE-AUTOMATISATION.md  ANALYSE-SIMPLIFICATION.md  AUDIT-BBIA-RIGOUREUX.md  AUDIT-COMPLET-VITRINE.md  AUDIT-FINAL-24-NOVEMBRE.md  AUDIT-FINAL-ACTIONS.md  AUDIT-FINAL-COMPLET.md  AUDIT-LUNA-PRO-2025-01-27.md  AUDIT-LUNA-PRO-V2-2025-01-27.md  AUDIT-PERPLEXITY-REPONSE.md  AUTRES-POINTS-AMELIORATION.md  CHECKLIST-FINAL.md  CHECKLIST-VIGILANCE.md  CONTRIBUTING.md  CORRECTIONS.md  DIAGNOSTIC-PERFORMANCE.md  GUIDE-REORGANISATION-PINNED-REPOS.md  GUIDE-TRANSFORMATION-PROFESSIONNELLE.md  INDEX.md  INSTRUCTIONS-SIMPLE.md  LEARNING_JOURNAL.md  MIGRATION.md  OPTIMISATION-DESCRIPTIONS-GITHUB.md  PLAN-ACTION-1-MOIS.md  PLAN-TRANSFORMATION-COMPLET.md  POINTS-ULTRA-FIN-INTEGRES.md  PRIORITES-TRAVAIL-2025-11-13.md  PROCHAINES-ETAPES-METRICS.md  PROJECT_README.md  PROMPT-AUDIT-PERPLEXITY.md  PROPOSITIONS-SIMPLIFICATION.md  QUICK-START.md  README-PROFIL.md  README.backup.20251110_175735.md  README.md  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
audits/: ANALYSE-3-PROJETS-FEATURED.md  AUDIT-AUTOMATISATION-COMPLETE.md  AUDIT-BBIA-RIGOUREUX.md  AUDIT-COMPLET-PROJETS.md  AUDIT-LUNA-PRO.md  AUDIT-PERPLEXITY-REPONSE.md  SYNTHESE-AUDIT-PROJETS.md
config/: config.example.json  projects-data.json
docs/: ANALYSE-AUTOMATISATION.md  AUTOMATISATION-COMPLETE.md  AUTOMATISATION.md  CONTRIBUTING.md  messaging-variants.md
guides/: GUIDE-DECOUVRIR-PROBLEMES.md  GUIDE-SOLUTIONS-METRIQUES.md
plans/: PLAN-ACTION-1-MOIS.md  PLAN-SUITE-ARKALIA-METRICS.md  (+1 more)
prompts/: PROMPT-AUDIT-PROJET.md  (+2 more)
(+47 files in other folders)
